--- a/reactGPT/src/components/Chat.css
+++ b/reactGPT/src/components/Chat.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     max-height: 80vh;
     min-height: 200px;
-    max-width: 900px;
-    width: 80%;
+    width: 77vw;
+    min-width: 280px;
     padding: 20px;
     border-radius: 10px;
   
